--- a/web/src/main/resources/templates/fragments/nav.html
+++ b/web/src/main/resources/templates/fragments/nav.html
@@ -11,7 +11,7 @@
             <li><a th:classappend="${page == 'movie/index' ? 'currentPageNav' : ''}" th:href="@{/movie/index}">电影管理</a></li>
             <li><a th:classappend="${page == 'show/index' ? 'currentPageNav' : ''}" th:href="@{/show/index}">节目管理</a></li>
             <li><a th:classappend="${page == 'person/index' ? 'currentPageNav' : ''}" th:href="@{/person/index}">观众管理</a></li>
-            <li><a th:classappend="${page == 'worth/movie' ? 'currentPageNav' : ''}" th:href="@{/worth/movie}">评分统计</a></li>
+            <li><a th:classappend="${page == 'worth/movie' ? 'currentPageNav' : ''}" th:href="@{/worth/movie}">电影排名</a></li>
             <li><a th:classappend="${page == 'worth/user' ? 'currentPageNav' : ''}" th:href="@{/worth/user}">推荐给观众</a></li>
             <li><a th:classappend="${page == 'worth/friend' ? 'currentPageNav' : ''}" th:href="@{/worth/friend}">推荐给朋友</a></li>
         </ul>
