--- a/web/src/main/resources/templates/movie/index.html
+++ b/web/src/main/resources/templates/movie/index.html
@@ -37,7 +37,7 @@
     </div>
     </form>
     <div class="newBtnBox">
-        <a id="addUserInf" class="blueBtn-62X30" href="javascript:void(0)">新增</a>
+        <a id="addInfo" class="blueBtn-62X30" href="javascript:void(0)">新增</a>
     </div>
     <div class="dataDetailList mt-12">
         <table class="dataListTab">
